Refactored the code. Added some new html and javascript code to include a user interface.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game</title>
-</head>
-<body>
-    <script src="javascript.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rock Paper scissors Game</title>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+  <body>
+    <h1>Rock Paper Scissors Game</h1>
+    <section class="gamingArea">
+      <div class="results">
+        <p class="scoreBoard"></p>
+      </div>
+      <h2>Choose your choice:</h2>
+      <div class="btn">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+      </div>
+      <div class="verdict"></div>
+    </section>
+
+    <script src="/javascript.js"></script>
+  </body>
 </html>
