Specified the full path to my css and js files

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper scissors Game</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="../Rock-paper-scissors-JS-game/style.css" />
   </head>
   <body>
     <h1>Rock Paper Scissors Game</h1>
@@ -21,6 +21,6 @@
       <div class="verdict"></div>
     </section>
 
-    <script src="/javascript.js"></script>
+    <script src="../Rock-paper-scissors-JS-game/javascript.js"></script>
   </body>
 </html>
