feat: Added some a background color to and bolded the score board.

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   <body>
     <h1>Rock Paper Scissors Game</h1>
     <section class="gamingArea">
-      <div class="results">
-        <p class="scoreBoard"></p>
-      </div>
+      <div class="results"></div>
       <h3>Choose your choice:</h3>
       <div class="btn">
         <button class="rock">Rock</button>
